# Aevum_OS

./: .env.example  .env.production.example  .gitignore  Aevum_薪火OS_产品路演.md  Aevum_薪火OS_会话总结.md  Aevum_薪火OS_会话总结_v2.md  Autonomous_Project_Execution_Charter.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf
.trae/: rules.md
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/.deps/alembic-1.18.5.dist-info/: RECORD
backend/.deps/amqp-5.3.1.dist-info/: RECORD
backend/.deps/annotated_doc-0.0.4.dist-info/: RECORD
backend/.deps/annotated_types-0.7.0.dist-info/: RECORD
backend/.deps/anyio-4.14.2.dist-info/: RECORD
backend/.deps/asyncpg-0.31.0.dist-info/: RECORD
backend/.deps/bcrypt-5.0.0.dist-info/: RECORD
backend/.deps/billiard-4.2.4.dist-info/: RECORD
backend/.deps/celery-5.6.3.dist-info/: RECORD
backend/.deps/certifi-2026.6.17.dist-info/: RECORD
backend/.deps/click-8.4.2.dist-info/: RECORD
backend/.deps/click_didyoumean-0.3.1.dist-info/: RECORD
backend/.deps/click_plugins-1.1.1.2.dist-info/: RECORD
backend/.deps/click_repl-0.3.0.dist-info/: RECORD
backend/.deps/colorama-0.4.6.dist-info/: RECORD
backend/.deps/distro-1.9.0.dist-info/: RECORD
backend/.deps/ecdsa-0.19.2.dist-info/: RECORD
backend/.deps/fastapi-0.139.0.dist-info/: RECORD
backend/.deps/greenlet-3.5.3.dist-info/: RECORD
backend/.deps/h11-0.16.0.dist-info/: RECORD
backend/.deps/httpcore-1.0.9.dist-info/: RECORD
backend/.deps/httpx-0.28.1.dist-info/: RECORD
backend/.deps/idna-3.18.dist-info/: RECORD
backend/.deps/iniconfig-2.3.0.dist-info/: RECORD
backend/.deps/jiter-0.16.0.dist-info/: RECORD  WHEEL
backend/.deps/kombu-5.6.2.dist-info/: RECORD
backend/.deps/mako-1.3.12.dist-info/: RECORD
backend/.deps/markupsafe-3.0.3.dist-info/: RECORD
backend/.deps/openai-2.45.0.dist-info/: RECORD
backend/.deps/orjson-3.11.9.dist-info/: RECORD
backend/aevum/: README.md  __init__.py  client.py  demo.py  demo_langgraph.py  models.py  pyproject.toml
backend/alembic/: env.py
backend/app/: __init__.py  celery_app.py  main.py
backend/scripts/: bootstrap_seeds.py  check_embeddings.py  e2e_test.py  embed_one.py  perf_baseline.py  regenerate_embeddings.py  test_search_precision.py  verify_adapter_loop.py  verify_bootstrap.py  verify_e2e_user_flow.py  verify_federation.py
backend/tests/: __init__.py  conftest.py
(+284 files in other folders)
