[project]
name = "aevum-backend"
version = "0.1.0"
description = "Aevum (薪火) OS - Experience Operating System Backend"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",

    # Data Validation
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # Async Tasks
    "celery>=5.4.0",
    "redis>=5.2.0",

    # HTTP Client
    "httpx>=0.28.0",

    # LLM / Embedding
    "openai>=1.0,<2.0",

    # Utilities
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.1",
    "orjson>=3.10.0",

    # Security
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0,<5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "black>=24.10.0",
    "mypy>=1.13.0",
    "aiosqlite>=0.20.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "C4", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
